test/negative/exception_no_pattern.mli
exception E of int

val f : int -> int
(*@ y = f x
    raises E *)
