test/negative/exception_no_pattern.mli.expected

*******************************
********** Parsed file ********
*******************************
exception E of int 
val f : int -> int[@@gospel {| y = f x
    raises E |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Stdlib *)

(*@ open Gospelstdlib *)

exception E of int 

val f : int -> int
(*@ y = f x
    with ...
     *)
File "exception_no_pattern.mli", line 5, characters 11-12:
Error: Type checking error: Exception pattern does not match its type.
